[package]
name = "ainulindale"
version = "0.1.0"
authors = ["John Freeman <john@johnfreeman.dev>"]
edition = "2021"
description = "A simple rust-based automation tool for orchestrating system configurations across multiple OS environments."
license = "MIT"

[dependencies]
anyhow = "1.0.86"
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = { version = "0.17.8", features = ["tokio"] }
indicatif-log-bridge = "0.2.3"
openssh = "0.11.0"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.5"

